Fixes to look of the sidebar/ info-box area. code readability improved

--- a/css/style.css
+++ b/css/style.css
@@ -5,35 +5,40 @@
 *,
 ::after,
 ::before {
-	box-sizing: content-box;
+	box-sizing: border-box;
 }
 /* ========= Colors ========= */
 :root {
-	--site-blue: #1d5b9f;
-	--site-khaki: #b68561;
-	--site-brown: #7d6156;
-	--site-gray: #5e6470;
-	--site-dark-gray: #3c4245;
+	--site-gold: #e3b04b;
+	--site-light: #f8f8f8;
+	--site-accent: #f1d6ab;
+	--site-dark: #2b2b28;
 	--site-silver: #c3c2b2;
 	--site-white: #fff;
 }
 
 /* ========= General ========= */
-a {
-	color: inherit;
-}
 
 body,
 html {
 	margin: 0;
-	background-color: var(--site-dark-gray);
+	background-color: var(--site-dark);
 }
-
+a {
+	color: inherit;
+	text-decoration: none;
+}
+ul,
+li {
+	list-style-type: none;
+}
+.row {
+	margin: 0;
+}
 /* ========= Navbar ========= */
 .navbar {
-	background-color: var(--site-dark-gray);
-	border-bottom: 1px solid var(--site-gray);
-	opacity: 85%;
+	background-color: var(--site-dark);
+	border-bottom: 1px solid var(--site-accent);
 }
 
 .navbar-nav > li > a {
@@ -41,13 +46,13 @@ html {
 	opacity: 150% !important;
 }
 #logo {
-	margin-left: -10-px;
+	margin-left: -20px;
 }
 .logo-text {
 	font-family: 'Bangers', cursive;
 	font-size: 28px;
 	vertical-align: middle;
-	margin-left: -10px;
+	margin-left: 0px;
 }
 /* --------- Navbar Media Queries --------- */
 @media (max-width: 576px) {
@@ -65,6 +70,7 @@ html {
 		text-align: center;
 		font-size: 1.5rem;
 		line-height: 2em;
+		border-top: 1px solid var(--site-accent);
 	}
 }
 nav > .navbar {
@@ -76,27 +82,33 @@ nav > .navbar {
 		padding-right: 20px;
 	}
 }
-
 .navbar-toggler {
-	margin-right: 25px;
+	padding: 10px;
+	background-color: var(--site-silver);
+	color: black;
 }
+
 /* ========= Header ========= */
+.hero-img {
+	margin: 100px 0 10px 0;
+	max-width: 100%;
+}
 .header-wrapper {
 	width: 100%;
 	padding: 0;
 }
 .join-info {
 	width: 100%;
-	background-color: var(--site-gray);
+	background-color: var(--site-accent);
 	padding: 10px;
-	border-top: 1px solid var(--site-gray);
-	border-bottom: 1px solid var(--site-gray);
-	-webkit-box-shadow: 0px 42px 60px -9px rgba(0, 0, 0, 0.6);
-	-moz-box-shadow: 0px 42px 60px -9px rgba(0, 0, 0, 0.6);
-	box-shadow: 0px 42px 60px -9px rgba(0, 0, 0, 0.6);
+	border-top: 1px solid var(--site-accent);
+	border-bottom: 1px solid var(--site-accent);
+	-webkit-box-shadow: 0px 2px 10px -2px rgba(0, 0, 0, 0.6);
+	-moz-box-shadow: 0px 2px 10px -2px rgba(0, 0, 0, 0.6);
+	box-shadow: 0px 2px 10px -2px rgba(0, 0, 0, 0.6);
 }
 .join-info-text {
-	color: var(--site-white);
+	color: #000;
 	font-size: 1.5em;
 	font-weight: 800;
 	letter-spacing: 4px;
@@ -107,7 +119,7 @@ nav > .navbar {
 	font-size: 0.8em;
 	margin-top: 8px;
 	margin-bottom: 10px;
-	color: var(--site-white);
+	color: #000;
 }
 .far {
 	position: relative;
@@ -117,19 +129,93 @@ nav > .navbar {
 .fa-file:hover {
 	color: black;
 }
+/* ========= Carousel ========= */
+
+@media (max-width: 576px) {
+	.carousel {
+		min-width: 100%;
+	}
+}
+.carousel {
+	margin: 0 auto;
+	max-width: 70%;
+}
+.carousel-item {
+	transition: transform 1.6s ease-in-out, -webkit-transform 1.6s ease-in-out;
+}
+
 .carousel-inner > .item {
 	position: relative;
 }
 .carousel-img {
 	margin-top: 126px;
 	width: 100%;
-	max-height: 700px;
+	max-height: 500px;
 }
 /* ========= Sidebar ========= */
 
+@media (max-width: 576px) {
+	.info-box {
+		background-image: url(../assets/images/pic3.jpeg);
+		width: 100%;
+		margin: 10px auto;
+		text-align: center;
+	}
+	.info-box-item {
+		width: 100%;
+		display: inline-block;
+		padding: 2px 0px;
+		color: var(--site-white);
+	}
+	.info-box-item > ul {
+		display: inline-block;
+		background-color: rgba(255, 255, 255, 0.35);
+		border-radius: 2px;
+		padding: 10px;
+	}
+	i {
+		font-size: 26px;
+		margin: 8px;
+	}
+	.info-email {
+		margin-left: 20px;
+	}
+}
+.info-box-text {
+	font-weight: bold;
+	margin: 10px 0 20px;
+} /*
+.info-box {
+	background-color: rgba(255, 255, 255, 0.4);
+	width: 300px;
+	margin: 0 auto;
+	text-align: center;
+}
+.info-box-item {
+	width: 100%;
+	display: inline-block;
+	background-color: var(--site-silver);
+	margin: 10px 0px;
+	padding: 2px 0px;
+}
+.info-box-item > ul {
+	display: inline-block;
+	background-color: rgba(255, 255, 255, 0.35);
+	border-radius: 2px;
+}
+i {
+	font-size: 26px;
+	margin: 8px;
+}
+.opening-day {
+	text-align: left;
+}
+.opening-time {
+	text-align: center;
+} */
 /* ========= Main ========= */
 .card-body {
-	background-color: var(--site-gray);
+	background-color: var(--site-accent);
 }
 .card-title {
 	margin: 0 auto;
